Adding logout button

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 							<a class="brand-logo" href="index.html"><span class="red-text">Game</span>Start</a>
 						</div>
 						<div class="right hide-on-med-and-down">
-							Get Your Game to Level 1
+							Level Up Your Game
 						</div>
 					</div>
 				</div>
@@ -59,7 +59,7 @@
 				<div class="row">
 					<div class="col s12">
 						<div class="card-panel" id="topCardHome">
-							Welcome to <span class="red-text">Game</span>Start!  Here you can find information about your favorite games.  Never played it before?  That's why you're here!  Do a search to find out the latest <a href="https://www.reddit.com" target="_blank">Reddit</a> threads regarding your game and then find players on <a href="https://www.twitch.tv" target=")blank">Twitch</a> who can give you a first-hand experience on how to play the game.  Get your game to Level 1!
+							Welcome to <span class="red-text">Game</span>Start!  Here you can find information about your favorite games.  Never played it before?  That's why you're here!  Do a search to find out the latest <a href="https://www.reddit.com" target="_blank">Reddit</a> threads regarding your game and then find players on <a href="https://www.twitch.tv" target=")blank">Twitch</a> who can give you a first-hand experience on how to play the game.  Level up your game!
 						</div>
 						<div class="card-panel" id="topCardSearch">
 							<span id="welcomeMessage"></span>
@@ -207,6 +207,12 @@
 						<h5 class="white-text">Stuff to Click</h5>
 						<ul>
 							<li>
+								<div class="chip footerChip waves-effect waves-red #dddddd" id="logOut">
+									<img src="assets/images/logout.jpg" alt="Support">
+									Log Out
+								</div>
+							</li>
+							<li>
 								<a class="modal-trigger" href="#supportModal">
 									<div class="chip footerChip waves-effect waves-red #dddddd">
 										<img src="assets/images/support-float-icon.jpg" alt="Support">
@@ -247,7 +253,7 @@
 								<p>2. If you've made any searches, just click on the button to load up its information.
 								<p>&nbsp;&nbsp;&nbsp;* If you want to create a new search, just enter the game name in the field and click Add.</p>
 								<p>&nbsp;&nbsp;&nbsp;* To delete a search button, just enter the game name in the field and click Remove.</p>
-								<p>3. In the Reddit and Twitch boxes, just click on the links to get the info you need to take Get your game to Level 1!</p>
+								<p>3. In the Reddit and Twitch boxes, just click on the links to get the info you need to take level up your game!</p>
 							</div>
 							<div class="modal-footer">
 								<a href="#!" class="modal-action modal-close waves-effect waves-red btn-flat">Cool</a>
