Updated Support Modal

--- a/index.html
+++ b/index.html
@@ -248,12 +248,31 @@
 						<div id="supportModal" class="modal black-text">
 							<div class="modal-content">
 								<h4>Support for the Site</h4>
-								<p>If you want to use the site, follow these simple steps:</p>
-								<p>1. Enter your name in the Sign In or Sign Up field.  This will let us know who you are and bring up any previous searches you've saved.</p>
-								<p>2. If you've made any searches, just click on the button to load up its information.
-								<p>&nbsp;&nbsp;&nbsp;* If you want to create a new search, just enter the game name in the field and click Add.</p>
-								<p>&nbsp;&nbsp;&nbsp;* To delete a search button, just enter the game name in the field and click Remove.</p>
-								<p>3. In the Reddit and Twitch boxes, just click on the links to get the info you need to take level up your game!</p>
+								  <div class="row">
+									<div class="col s12">
+									  <ul class="tabs">
+									  	<li class="tab col s3"><a class="active" href="#intro">Introduction</a></li>
+										<li class="tab col s3"><a href="#signingIn">Sign In</a></li>
+										<li class="tab col s3"><a href="#signingUp">Sign Up</a></li>
+										<li class="tab col s3"><a href="#usingSite">Using the Site</a></li>
+									  </ul>
+									</div>
+									<div id="intro" class="col s12">
+										<span class="red-text">Game</span>Start is here to get your game up to speed.  If you haven't created an account yet, you'll need to sign up.  Otherwise, sign in.  You can then do a search for your game and get links to Reddit to find out what gamers are saying as well as video feeds from Twitch so you can watch people play before you risk your avatar's pixels.
+									</div>
+									<div id="signingIn" class="col s12">
+										From the home screen, put in your username and password and click Submit.  Please note that passwords are cASe seNSItivE.  If you're having trouble with your account, send us feedback.
+									</div>
+									<div id="signingUp" class="col s12">
+										If you don't have an account yet, you'll want to click the link to sign up, found underneath the Submit button on the home page.  You'll be asked to create a username, enter your email address, and create a password.  When you click Submit, your account will be created and you'll be taken into the site to start your quest to level up your game.
+									</div>
+									<div id="usingSite" class="col s12">
+										<p>You'll see a Search section at the top of the screen.  Enter the name of the game in the field and click Add.  The system uses Twitch for its database so make sure to match the spelling.  For example, "Diablo" is not the same as "Diablo III: Reaper of Souls."  If you search for the former, you'll find people playing the original Diablo (and yes, they do still exist).</p>
+										<p>If we can't find your game, we'll let you know.  You'll want to try again.</p>
+										<p>When you create a search, you'll then have a button created for that game.  Just click on it to load up its Reddit and Twitch results.</p>
+										<p>To delete a button for a game you no longer want, just enter its name (spelling counts!) and click Delete.</p>
+									</div>
+								  </div>
 							</div>
 							<div class="modal-footer">
 								<a href="#!" class="modal-action modal-close waves-effect waves-red btn-flat">Cool</a>
