Reworked headers to help responsive

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
 					<div class="col s12 m6">
 						<div class="card black" id="reddit">
 							<div class="card-content white-text">
-								<span class="card-title">Learn From the Gaming Community</span>
+								<span class="card-title">Read</span>
 								<div class="row" id="reddit-row">
 									<div class="reddit-row-results">
 										<!-- Reddit results here -->
@@ -183,7 +183,7 @@
 					<div class="col s12 m6">
 						<div class="card black" id="twitch">
 							<div class="card-content white-text">
-								<span class="card-title">Learn from the Pros</span>
+								<span class="card-title">Watch</span>
 								<div class="row" id="twitch-row">
 									<div class="twitch-row-results">
 									<!-- twitch results will go here -->
